--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,9 @@ env:
 
 jobs:
   push:
+    permissions:
+      contents: read
+      packages: write
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
